--- a/style.css
+++ b/style.css
@@ -80,12 +80,22 @@ img {
     background: linear-gradient(var(--ctp-latte-base), var(--ctp-latte-crust)) padding-box, linear-gradient(var(--ctp-latte-lavender), var(--ctp-latte-mauve)) border-box;
     border-radius: 35px;
     border: 4px solid transparent;
-    margin-bottom: 10%;
+    margin-bottom: auto;
 
 }
 
 .smallbox:hover {
     border-radius: 20px;
+}
+
+.tinybox {
+    border-radius: 25px;
+    font-size: 25px;
+    margin: auto;
+    align-items: end;
+    padding: 10px;
+    width: max-content;
+    height: auto;
 }
 
 .alert {
